feat: integrate realtime travel data
